# oneclick-subtitle-generator

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  QUICK_START.md  README.md  SECURITY.md  install.py  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  pull-request-template.md
.github/workflows/: release.yml
docs/: installation.md  troubleshooting.md  usage.md
examples/: README.md
installers/: install_linux.sh  install_macos.sh  install_windiws.bat  install_windows.bat  install_windows.ps1
src/: config.py  enhanced_translator.py  oneclick_subtitle_generator.py  utils.py
tests/: test_basic.py
